--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         <h3><i class="fas fa-project-diagram"></i> Core Methodologies</h3>
                         <ul class="toc-list">
                             <li><a href="#waterfall">Waterfall Methodology</a></li>
-                            <li><a href="agile-lean-management.html">Agile & Lean Management</a></li>
+                            <li><a href="pages/agile-lean-management.html">Agile & Lean Management</a></li>
                             <li><a href="#scrum">Introduction to Scrum</a></li>
                         </ul>
                     </div>
@@ -556,3 +556,4 @@
 </body>
 
 </html>
+
